--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -28,9 +28,9 @@ jobs:
         cp AFK/afk.smx dist/
     - name: Final script
       run: echo All done
-    - name: Test Powershell
+    - name: Prepare publish
       run: |
-        pwsh -command 'for ($i = 0; $i -lt 10; $i++) { Write-Host test $i }'
+        pwsh prepare-publish.ps1
     - name: Upload artifact
       uses: actions/upload-artifact@v1.0.0
       with:
