Only upload ftp files

--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -19,6 +19,6 @@ jobs:
       uses: actions/upload-artifact@v1.0.0
       with:
         # Artifact name
-        name: plugins-binaries
+        name: ftp-files
         # Directory containing files to upload
-        path: dist/
+        path: dist/ftp/
