--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -34,4 +34,4 @@ jobs:
           path: ftp/
       - name: Upload to FTP
         run: |
-          echo Test: [${{ secrets.MY_SECRET }}] :)
+          echo "Test: [${{ secrets.MY_SECRET }}] :)"
