--- a/.github/workflows/powershell-version.yml
+++ b/.github/workflows/powershell-version.yml
@@ -9,5 +9,5 @@ jobs:
     steps:
     - name: Powershell version
       run: |
-        pwsh -Command -Get-Host
+        pwsh -Command Get-Host
         
