Formatting: Going back to tabs

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -98,7 +98,7 @@
     "SpacesInSquareBrackets: false",
     "Standard: Auto",
     "TabWidth: ${TabSize}",
-    "UseTab: ${UseTab}",
+    "UseTab: ForContinuationAndIndentation",
     "CommentPragmas: '^#define|#tryinclude'"
   ]
 }
