Updated countdown to SM 1.12

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -39,7 +39,7 @@
     "AfterStruct: true",
     "AfterUnion: true",
     "BeforeCatch: true",
-    "BeforeElse: true",
+    "BeforeElse: false",
     "BeforeLambdaBody: true",
     "BeforeWhile: true",
     "IndentBraces: false",
@@ -90,7 +90,7 @@
     "SpaceBeforeSquareBrackets: false",
     "SpaceInEmptyBlock: false",
     "SpaceInEmptyParentheses: false",
-    "SpacesBeforeTrailingComments: ${TabSize}",
+    "SpacesBeforeTrailingComments: 1",
     "SpacesInConditionalStatement: false",
     "SpacesInContainerLiterals: true",
     "SpacesInCStyleCastParentheses: false",
