Updated logstf and AnyHttp to SM 1.12

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
+  "editor.formatOnSave": false,
   "sourcepawn.formatterSettings": [
     "AlignAfterOpenBracket: Align",
     "AlignArrayOfStructures: Left",
